--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -8,7 +8,7 @@
     user-select: none;
 
     .navigation-container {
-      z-index: 3;
+      z-index: 100;
       display: flex;
       justify-content: space-between;
       position: fixed;
@@ -227,6 +227,126 @@
       }
     }
   }
+
+  .cars-categories-section {
+
+    h2 {
+      font-family: $oswald;
+      text-align: center;
+      font-size: 2rem;
+      margin-top: 30px;
+
+      &::after {
+        content: '';
+        width: 100%;
+        max-width: 250px;
+        height: 3px;
+        margin: 10px auto 30px;
+        display: flex;
+        background: $color-red;
+      }
+    }
+
+    .categories-list {
+      display: grid;
+      grid-template-columns: 1fr;
+
+      .categories-list-item {
+        background: $color-white;
+        box-shadow: 0 0 10px -5px $color-black;
+        position: relative;
+        overflow: hidden;
+        height: 250px;
+
+        &:hover {
+          cursor: pointer;
+
+          img {
+            transform: scale(1.1);
+          }
+        }
+
+        .image-wrapper {
+          height: 100%;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: relative;
+            z-index: 1;
+            transition: $default-transition;
+          }
+
+          &::after {
+            content: '';
+            display: flex;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            background: $color-black;
+            position: absolute;
+            z-index: 2;
+            opacity: 0.5;
+          }
+        }
+
+        .content {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          z-index: 3;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+
+          h3 {
+            font-weight: bold;
+            font-family: $raleway;
+            font-size: 1.5rem;
+            color: $color-white;
+            margin-bottom: 20px;
+          }
+
+          a.button {
+            padding: 7px 50px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 425px) {
+
+  .home {
+
+    .cars-categories-section {
+
+      .categories-list {
+
+        .categories-list-item {
+          height: 400px;
+
+          .content {
+
+            h3 {
+              font-size: 2.5rem;
+            }
+
+            a.button {
+              font-size: 1.2rem;
+              padding: 10px 70px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -256,6 +376,29 @@
         }
       }
     }
+
+    .cars-categories-section {
+
+      .categories-list {
+        grid-template-columns: repeat(2, 1fr);
+
+        .categories-list-item {
+          height: 250px;
+
+          .content {
+
+            h3 {
+              font-size: 2rem;
+            }
+
+            a.button {
+              font-size: 1.2rem;
+              padding: 7px 50px;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -278,6 +421,16 @@
         }
       }
     }
+
+    .cars-categories-section {
+
+      .categories-list {
+
+        .categories-list-item {
+          height: 350px;
+        }
+      }
+    }
   }
 }
 
@@ -296,6 +449,17 @@
 
         .button {
           padding: 12px 100px;
+        }
+      }
+    }
+
+    .cars-categories-section {
+
+      .categories-list {
+        grid-template-columns: repeat(3, 1fr);
+
+        .categories-list-item {
+          height: 300px;
         }
       }
     }
