Added feedback section

--- a/src/styles/home/home.css
+++ b/src/styles/home/home.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .home {
   font-family: "Nunito", sans-serif; }
   .home .home-header {
@@ -158,6 +159,15 @@
       .home .home-header .header-content p {
         font-size: 0.9rem;
         margin-bottom: 50px; }
+      .home .home-header .header-content .scroll-down-message {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+        font-size: 1.2rem; }
+        .home .home-header .header-content .scroll-down-message span {
+          margin-bottom: 10px; }
   .home section h2 {
     font-family: "Oswald", sans-serif;
     text-align: center;
@@ -223,21 +233,99 @@
           margin-bottom: 20px; }
         .home .cars-categories-section .categories-list .categories-list-item .content a.button {
           padding: 7px 50px; }
-  .home .about-section {
-    clear: both; }
-    .home .about-section .content {
-      padding-inline: 20px;
-      text-align: center; }
-      .home .about-section .content img {
-        max-width: 900px;
-        width: 100%;
-        margin: 0 auto 20px;
-        border-radius: 3px;
-        box-shadow: 0 0 10px -5px #171717; }
-      .home .about-section .content p {
-        font-size: 0.9rem;
-        text-indent: 40px;
-        text-align: justify; }
+  .home .about-section .content {
+    padding-inline: 20px;
+    text-align: center; }
+    .home .about-section .content img {
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto 20px;
+      border-radius: 3px;
+      box-shadow: 0 0 10px -5px #171717; }
+    .home .about-section .content p {
+      font-size: 0.9rem;
+      text-indent: 40px;
+      text-align: justify; }
+    .home .about-section .content::after {
+      content: '';
+      display: block;
+      clear: both; }
+  .home .feedbacks-section {
+    padding-inline: 10px; }
+    .home .feedbacks-section .feedbacks-container {
+      display: flex;
+      justify-content: center; }
+      .home .feedbacks-section .feedbacks-container .controls {
+        width: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2.5rem;
+        margin-block: 5px;
+        transition: 0.3s ease; }
+        .home .feedbacks-section .feedbacks-container .controls:first-child {
+          margin-right: 5px; }
+        .home .feedbacks-section .feedbacks-container .controls:last-child {
+          margin-left: 5px; }
+        .home .feedbacks-section .feedbacks-container .controls:hover {
+          background: #DDDDDD;
+          border-radius: 10px;
+          cursor: pointer; }
+      .home .feedbacks-section .feedbacks-container .feedbacks {
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+        gap: 15px;
+        justify-content: center;
+        width: 100%; }
+        .home .feedbacks-section .feedbacks-container .feedbacks .feedback {
+          margin: 5px;
+          padding: 30px;
+          border-radius: 10px;
+          box-shadow: 0 0 10px -5px #171717;
+          display: flex;
+          flex-direction: column;
+          cursor: pointer;
+          transition: 0.3s ease; }
+          .home .feedbacks-section .feedbacks-container .feedbacks .feedback:hover {
+            box-shadow: 0 0 20px -10px #171717;
+            transform: scale(1.01); }
+          .home .feedbacks-section .feedbacks-container .feedbacks .feedback header {
+            margin-bottom: 20px; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback header img {
+              width: 64px;
+              height: 64px;
+              object-fit: cover;
+              border-radius: 100%; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback header h3 {
+              font-weight: bold;
+              margin-top: 10px; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback header span {
+              color: #706C61;
+              font-size: 0.9rem; }
+          .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content {
+            display: inline-flex;
+            align-items: center;
+            height: 100%;
+            text-align: justify;
+            font-size: 0.9rem; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content p {
+              margin-inline: 10px; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content p::before, .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content p::after {
+              display: flex;
+              width: 100%;
+              font-size: 1.5rem;
+              color: #DA0037; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content p::before {
+              justify-content: flex-start;
+              margin-left: -10px;
+              margin-top: 10px;
+              margin-bottom: -10px;
+              content: "“"; }
+            .home .feedbacks-section .feedbacks-container .feedbacks .feedback .content p::after {
+              justify-content: flex-end;
+              margin-left: 10px;
+              content: "”"; }
 
 @media screen and (min-width: 425px) {
   .home .cars-categories-section .categories-list .categories-list-item {
@@ -268,14 +356,20 @@
         font-size: 1.2rem;
         padding: 7px 50px; }
   .home .about-section .content p {
-    font-size: 1rem; } }
+    font-size: 1rem; }
+  .home .feedbacks-section .feedbacks-container .feedbacks {
+    grid-template-columns: repeat(2, 1fr); } }
 @media screen and (min-width: 1024px) {
   .home .home-header .navigation-container .link-group .navigation {
     display: flex; }
   .home .home-header .navigation-container .show-burger-menu {
     display: none; }
   .home .cars-categories-section .categories-list .categories-list-item {
-    height: 350px; } }
+    height: 350px; }
+  .home .feedbacks-section {
+    padding-inline: 20px; }
+    .home .feedbacks-section .feedbacks-container .feedbacks {
+      grid-template-columns: repeat(3, 1fr); } }
 @media screen and (min-width: 1440px) {
   .home .home-header .header-content p {
     font-size: 1.2rem;
@@ -289,6 +383,20 @@
   .home .about-section .content img {
     margin-right: 20px;
     margin-bottom: 15px;
-    float: left; } }
+    float: left; }
+  .home .feedbacks-section .feedbacks-container .feedbacks {
+    grid-template-columns: repeat(4, 1fr); } }
+@media screen {
+  .feedbacks-section .feedbacks-container .feedbacks .feedback:nth-child(n + 5) {
+    display: none; } }
+@media screen and (max-width: 1439px) {
+  .feedbacks-section .feedbacks-container .feedbacks .feedback:nth-child(n + 4) {
+    display: none; } }
+@media screen and (max-width: 1023px) {
+  .feedbacks-section .feedbacks-container .feedbacks .feedback:nth-child(n + 3) {
+    display: none; } }
+@media screen and (max-width: 767px) {
+  .feedbacks-section .feedbacks-container .feedbacks .feedback:nth-child(n + 2) {
+    display: none; } }
 
 /*# sourceMappingURL=home.css.map */
