--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -225,6 +225,19 @@
         font-size: 0.9rem;
         margin-bottom: 50px;
       }
+
+      .scroll-down-message {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+        font-size: 1.2rem;
+
+        span {
+          margin-bottom: 10px;
+        }
+      }
     }
   }
 
@@ -324,7 +337,6 @@
   }
 
   .about-section {
-    clear: both;
 
     .content {
       padding-inline: 20px;
@@ -342,6 +354,124 @@
         font-size: 0.9rem;
         text-indent: 40px;
         text-align: justify;
+      }
+
+      &::after {
+        content: '';
+        display: block;
+        clear: both;
+      }
+    }
+  }
+
+  .feedbacks-section {
+    padding-inline: 10px;
+
+    .feedbacks-container {
+      display: flex;
+      justify-content: center;
+
+      .controls {
+        width: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2.5rem;
+        margin-block: 5px;
+        transition: $default-transition;
+
+        &:first-child {
+          margin-right: 5px;
+        }
+
+        &:last-child {
+          margin-left: 5px;
+        }
+
+        &:hover {
+          background: $color-silver;
+          border-radius: $border-radius-middle;
+          cursor: pointer;
+        }
+      }
+
+      .feedbacks {
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+        gap: 15px;
+        justify-content: center;
+        width: 100%;
+
+        .feedback {
+          margin: 5px;
+          padding: 30px;
+          border-radius: $border-radius-middle;
+          box-shadow: 0 0 10px -5px $color-black;
+          display: flex;
+          flex-direction: column;
+          cursor: pointer;
+          transition: $default-transition;
+
+          &:hover {
+            box-shadow: 0 0 20px -10px $color-black;
+            transform: scale(1.01);
+          }
+
+          header {
+            margin-bottom: 20px;
+
+            img {
+              width: 64px;
+              height: 64px;
+              object-fit: cover;
+              border-radius: 100%;
+            }
+
+            h3 {
+              font-weight: bold;
+              margin-top: 10px;
+            }
+
+            span {
+              color: $color-light-gray;
+              font-size: 0.9rem;
+            }
+          }
+
+          .content {
+            display: inline-flex;
+            align-items: center;
+            height: 100%;
+            text-align: justify;
+            font-size: 0.9rem;
+
+            p {
+              margin-inline: 10px;
+            }
+
+            p::before, p::after {
+              display: flex;
+              width: 100%;
+              font-size: 1.5rem;
+              color: $color-red;
+            }
+
+            p::before {
+              justify-content: flex-start;
+              margin-left: -10px;
+              margin-top: 10px;
+              margin-bottom: -10px;
+              content: "“";
+            }
+
+            p::after {
+              justify-content: flex-end;
+              margin-left: 10px;
+              content: "”";
+            }
+          }
+        }
       }
     }
   }
@@ -435,6 +565,16 @@
         }
       }
     }
+
+    .feedbacks-section {
+
+      .feedbacks-container {
+
+        .feedbacks {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
   }
 }
 
@@ -464,6 +604,17 @@
 
         .categories-list-item {
           height: 350px;
+        }
+      }
+    }
+
+    .feedbacks-section {
+      padding-inline: 20px;
+
+      .feedbacks-container {
+
+        .feedbacks {
+          grid-template-columns: repeat(3, 1fr);
         }
       }
     }
@@ -508,6 +659,76 @@
           margin-right: 20px;
           margin-bottom: 15px;
           float: left;
+        }
+      }
+    }
+
+    .feedbacks-section {
+
+      .feedbacks-container {
+
+        .feedbacks {
+          grid-template-columns: repeat(4, 1fr);
+        }
+      }
+    }
+  }
+}
+
+@media screen {
+  .feedbacks-section {
+
+    .feedbacks-container {
+
+      .feedbacks {
+
+        .feedback:nth-child(n + 5) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1439px) {
+  .feedbacks-section {
+
+    .feedbacks-container {
+
+      .feedbacks {
+
+        .feedback:nth-child(n + 4) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .feedbacks-section {
+
+    .feedbacks-container {
+
+      .feedbacks {
+
+        .feedback:nth-child(n + 3) {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .feedbacks-section {
+
+    .feedbacks-container {
+
+      .feedbacks {
+
+        .feedback:nth-child(n + 2) {
+          display: none;
         }
       }
     }
