--- a/src/styles/application/app.scss
+++ b/src/styles/application/app.scss
@@ -12,103 +12,155 @@ body {
   background: $color-white;
 }
 
-.mobile-menu {
-  display: flex;
-  flex-direction: column;
-  background: $color-black;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.application {
 
-  header {
-    color: $color-white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-
-    h3 {
-      font-size: 1.3rem;
-    }
-
-    svg {
-      font-size: 1.5rem;
-      margin-right: 5px;
-      cursor: pointer;
-    }
-  }
-
-  nav {
+  .mobile-menu {
     display: flex;
     flex-direction: column;
-    padding: 30px 10px;
+    background: $color-black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-    a {
-      padding: 15px 10px;
-      margin-block: 2px;
-      text-align: center;
-      text-decoration: none;
+    header {
       color: $color-white;
-      cursor: pointer;
-      border-radius: $border-radius-small;
-      transition: $default-transition;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
 
-      &:hover, &.active {
-        background: $color-white;
-        color: $color-black;
+      h3 {
+        font-size: 1.3rem;
+      }
+
+      svg {
+        font-size: 1.5rem;
+        margin-right: 5px;
+        cursor: pointer;
+      }
+    }
+
+    .navigation-link-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+
+      svg {
+        color: $color-white;
+        position: absolute;
+        font-size: 1.5rem;
+        right: 0;
+        top: 2px;
+        padding: 10px 15px;
+      }
+
+      svg:hover + .submenu, .submenu:hover {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .submenu {
+        margin-top: 10px;
+        display: none;
+        background: $color-gray;
+        border-radius: $border-radius-small;
+
+        > a {
+          font-size: 0.9rem;
+          padding: 10px 20px;
+        }
+      }
+    }
+
+    nav {
+      display: flex;
+      flex-direction: column;
+      padding: 30px 10px;
+
+
+
+      a {
+        padding: 15px 10px;
+        margin-block: 2px;
+        text-align: center;
+        text-decoration: none;
+        color: $color-white;
+        cursor: pointer;
+        border-radius: $border-radius-small;
+        transition: $default-transition;
+
+        &:hover, &.active {
+          background: $color-white;
+          color: $color-black;
+
+          & + svg {
+            color: $color-black;
+          }
+        }
       }
     }
   }
-}
 
-.button {
-  padding: 10px 30px;
-  font-family: $nunito;
-  font-size: $default-font-size;
-  text-decoration: none;
-  cursor: pointer;
-  transition: $default-transition;
-  border-radius: $border-radius-small;
-  text-align: center;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button-white {
-  background: $color-white;
-  color: $color-black;
-
-  &:hover {
-    background: $color-white-blue;
+  .button {
+    padding: 10px 30px;
+    font-family: $nunito;
+    font-size: $default-font-size;
+    text-decoration: none;
+    cursor: pointer;
+    transition: $default-transition;
+    border-radius: $border-radius-small;
+    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
   }
-}
 
-.button-red {
-  background: $color-red;
-  color: $color-white;
+  .button-white {
+    background: $color-white;
+    color: $color-black;
 
-  &:hover {
-    background: $color-dark-red;
+    &:hover {
+      background: $color-white-blue;
+    }
   }
-}
 
-.button-black {
-  background: $color-black;
-  color: $color-white;
+  .button-red {
+    background: $color-red;
+    color: $color-white;
 
-  &:hover {
+    &:hover {
+      background: $color-dark-red;
+    }
+  }
+
+  .button-black {
+    background: $color-black;
+    color: $color-white;
+
+    &:hover {
+      background: $color-gray;
+    }
+  }
+
+  .button-gray {
     background: $color-gray;
+    color: $color-white;
+
+    &:hover {
+      background: $color-light-gray;
+    }
   }
-}
 
-.button-gray {
-  background: $color-gray;
-  color: $color-white;
-
-  &:hover {
-    background: $color-light-gray;
+  footer {
+    margin-top: 30px;
+    background: $color-black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $color-white;
+    text-align: center;
+    padding: 20px;
   }
 }
