--- a/src/styles/application/app.css
+++ b/src/styles/application/app.css
@@ -44,7 +44,7 @@ body {
       display: flex;
       flex-direction: column; }
     .application .mobile-menu .navigation-link-container .submenu {
-      margin-top: 10px;
+      margin-block: 10px;
       display: none;
       background: #444444;
       border-radius: 3px; }
@@ -80,7 +80,9 @@ body {
   text-align: center;
   display: inline-flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  outline: none;
+  border: none; }
 .application .button-white {
   background: #EDEDED;
   color: #171717; }
@@ -108,6 +110,7 @@ body {
   position: fixed;
   padding: 10px;
   transition: 0.3s ease;
+  font-family: "Nunito", sans-serif;
   top: 0;
   left: 0;
   right: 0; }
@@ -220,7 +223,44 @@ body {
   align-items: center;
   color: #EDEDED;
   text-align: center;
-  padding: 20px; }
+  padding: 20px;
+  position: relative;
+  bottom: 0; }
+
+.form-container .form-heading {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 20px; }
+.form-container form .form-group {
+  display: flex; }
+  .form-container form .form-group .form-item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    font-size: 1rem; }
+    .form-container form .form-group .form-item label {
+      width: 100%;
+      margin-bottom: 5px; }
+    .form-container form .form-group .form-item input:not([type="checkbox"]),
+    .form-container form .form-group .form-item input:not([type="radio"]),
+    .form-container form .form-group .form-item input:not([type="submit"]),
+    .form-container form .form-group .form-item textarea,
+    .form-container form .form-group .form-item select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #DDDDDD;
+      border-radius: 3px;
+      font-family: "Nunito", sans-serif;
+      outline: none;
+      font-size: 0.9rem; }
+    .form-container form .form-group .form-item textarea {
+      resize: vertical;
+      min-height: 150px; }
+    .form-container form .form-group .form-item .submit-button {
+      border: none !important;
+      margin-top: 15px;
+      font-size: 1.1rem !important; }
 
 @media screen and (min-width: 1024px) {
   .application .navigation-container .link-group .navigation {
