--- a/src/styles/application/app.css
+++ b/src/styles/application/app.css
@@ -262,6 +262,45 @@ body {
       margin-top: 15px;
       font-size: 1.1rem !important; }
 
+.selector {
+  border-radius: 3px;
+  cursor: pointer;
+  background: #FFFFFF;
+  border: 1px solid #DDDDDD;
+  user-select: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative; }
+  .selector > span {
+    width: 100%;
+    padding: 10px;
+    position: relative;
+    z-index: 2; }
+  .selector svg.sort-down-icon {
+    margin-top: -3px;
+    margin-bottom: 3px;
+    position: absolute;
+    right: 10px;
+    z-index: 1; }
+  .selector .option-list {
+    padding: 5px;
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    border-radius: 3px;
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    width: 100%;
+    box-sizing: border-box; }
+    .selector .option-list > div {
+      padding: 5px;
+      border-radius: 3px;
+      transition: 0.3s ease; }
+      .selector .option-list > div:hover {
+        background: #DDDDDD;
+        color: #DA0037; }
+
 @media screen and (min-width: 1024px) {
   .application .navigation-container .link-group .navigation {
     display: flex; }
