--- a/src/styles/application/variables.scss
+++ b/src/styles/application/variables.scss
@@ -5,6 +5,7 @@ $color-red: #DA0037;
 $color-white: #EDEDED;
 
 // other colors
+$color-default-white: #FFFFFF;
 $color-silver: #DDDDDD;
 $color-white-blue: #D6E0F0;
 $color-light-red: #FF6464;
@@ -21,3 +22,11 @@ $default-font-size: 1rem;
 $border-radius-small: 3px;
 $border-radius-middle: 10px;
 $default-transition: 0.3s ease;
+
+// breakpoints
+$mobile-small-screen: 320px;
+$mobile-medium-screen: 375px;
+$mobile-large-screen: 425px;
+$tablet-screen: 768px;
+$laptop-screen: 1024px;
+$laptop-large-screen: 1440px;
