--- a/src/styles/cars/cars.css
+++ b/src/styles/cars/cars.css
@@ -10,15 +10,15 @@
     width: 100%;
     height: calc(100vh - 55px);
     position: absolute;
-    z-index: 2;
-    padding: 20px;
-    margin-right: 20px;
-    display: flex;
+    z-index: 3;
+    padding: 10px 20px;
+    display: none;
     flex-direction: column;
     background: #EDEDED;
     box-shadow: 0 0 10px -7px #171717;
     box-sizing: border-box;
-    overflow-y: auto; }
+    overflow-y: auto;
+    transition: 0.3s ease; }
     .cars aside .sidebar-header {
       display: flex;
       justify-content: space-between;
@@ -90,6 +90,57 @@
         color: #171717; }
       .cars aside .price-per-day .MuiSlider-root .MuiSwitch-track {
         background: #DA0037; }
+  .cars .cars-container {
+    display: flex; }
+    .cars .cars-container aside {
+      display: flex; }
+    .cars .cars-container .content-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column; }
+  .cars .filters {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    background: #DDDDDD;
+    box-sizing: border-box; }
+    .cars .filters .filters-item {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-block: 5px; }
+      .cars .filters .filters-item.search-container {
+        max-width: 100%;
+        width: 100%; }
+      .cars .filters .filters-item.sorting-container:not(:last-child) {
+        max-width: calc(100% - 48px);
+        width: 100%;
+        margin-right: 0; }
+        .cars .filters .filters-item.sorting-container:not(:last-child) .selector {
+          width: 100%; }
+      .cars .filters .filters-item.show-filters-container svg {
+        background: #FFFFFF;
+        padding: 10px;
+        border-radius: 3px;
+        border: 1px solid #DDDDDD;
+        cursor: pointer; }
+      .cars .filters .filters-item:not(:last-child) {
+        margin-right: 10px; }
+      .cars .filters .filters-item label {
+        font-weight: bold;
+        margin-right: 10px;
+        white-space: nowrap; }
+      .cars .filters .filters-item input {
+        font-family: "Nunito", sans-serif;
+        padding: 7px;
+        width: 100%;
+        outline: none;
+        border: 1px solid #DDDDDD;
+        border-radius: 3px;
+        font-size: 1rem; }
+    .cars .filters .selector {
+      min-width: 180px; }
   .cars footer {
     position: relative;
     margin-top: 0;
@@ -104,6 +155,14 @@
       min-width: 200px; }
     .cars aside .availability, .cars aside .price-per-day, .cars aside .sidebar-header {
       width: 100%; } }
+@media screen and (min-width: 768px) {
+  .cars .filters {
+    flex-wrap: nowrap; }
+    .cars .filters .filters-item {
+      margin-block: 0; }
+      .cars .filters .filters-item.sorting-container:not(:last-child) {
+        margin-right: 10px;
+        width: auto; } }
 @media screen and (min-width: 1024px) {
   ::-webkit-scrollbar {
     width: 3px;
@@ -114,13 +173,17 @@
     border-radius: 3px; }
 
   .cars aside {
+    display: flex;
     flex-direction: column;
     width: 320px;
     position: relative;
     flex-wrap: nowrap;
-    z-index: 2;
     height: calc(100vh - 111px); }
     .cars aside .sidebar-section.sidebar-header {
-      display: none; } }
+      display: none; }
+  .cars .cars-container .content-container {
+    width: calc(100% - 320px); }
+  .cars .cars-container.full-screen > .content-container {
+    width: 100%; } }
 
 /*# sourceMappingURL=cars.css.map */
