--- a/src/styles/cars/cars.scss
+++ b/src/styles/cars/cars.scss
@@ -13,15 +13,15 @@
     width: 100%;
     height: calc(100vh - 55px);
     position: absolute;
-    z-index: 2;
-    padding: 20px;
-    margin-right: 20px;
-    display: flex;
+    z-index: 3;
+    padding: 10px 20px;
+    display: none;
     flex-direction: column;
     background: $color-white;
     box-shadow: 0 0 10px -7px $color-black;
     box-sizing: border-box;
     overflow-y: auto;
+    transition: $default-transition;
 
     .sidebar-header {
       display: flex;
@@ -152,6 +152,86 @@
     }
   }
 
+  .cars-container {
+    display: flex;
+
+    aside {
+      display: flex;
+    }
+
+    .content-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  .filters {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    background: $color-silver;
+    box-sizing: border-box;
+
+    .filters-item {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-block: 5px;
+
+      &.search-container {
+        max-width: 100%;
+        width: 100%;
+      }
+
+      &.sorting-container:not(:last-child) {
+        max-width: calc(100% - 48px);
+        width: 100%;
+        margin-right: 0;
+
+        .selector {
+          width: 100%;
+        }
+      }
+
+      &.show-filters-container {
+
+        svg {
+          background: $color-default-white;
+          padding: 10px;
+          border-radius: $border-radius-small;
+          border: 1px solid $color-silver;
+          cursor: pointer;
+        }
+      }
+
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
+
+      label {
+        font-weight: bold;
+        margin-right: 10px;
+        white-space: nowrap;
+      }
+
+      input {
+        font-family: $nunito;
+        padding: 7px;
+        width: 100%;
+        outline: none;
+        border: 1px solid $color-silver;
+        border-radius: $border-radius-small;
+        font-size: 1rem;
+      }
+    }
+
+    .selector {
+      min-width: 180px;
+    }
+  }
+
   footer {
     position: relative;
     margin-top: 0;
@@ -159,7 +239,7 @@
   }
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: $mobile-large-screen) {
 
   .cars {
 
@@ -179,7 +259,25 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $tablet-screen) {
+  .cars {
+
+    .filters {
+      flex-wrap: nowrap;
+
+      .filters-item {
+        margin-block: 0;
+
+        &.sorting-container:not(:last-child) {
+          margin-right: 10px;
+          width: auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $laptop-screen) {
 
   ::-webkit-scrollbar {
     width: 3px;
@@ -194,15 +292,29 @@
   .cars {
 
     aside {
+      display: flex;
       flex-direction: column;
       width: 320px;
       position: relative;
       flex-wrap: nowrap;
-      z-index: 2;
       height: calc(100vh - 111px);
 
       .sidebar-section.sidebar-header {
         display: none;
+      }
+    }
+
+    .cars-container {
+
+      .content-container {
+        width: calc(100% - 320px);
+      }
+
+      &.full-screen {
+
+        > .content-container{
+          width: 100%;
+        }
       }
     }
   }
