--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -347,7 +347,7 @@
   }
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: $mobile-large-screen) {
 
   .home {
 
@@ -375,7 +375,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet-screen) {
 
   .home {
 
@@ -448,7 +448,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: $laptop-screen) {
 
   .home {
 
@@ -475,7 +475,7 @@
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: $laptop-large-screen) {
 
   .home {
 
@@ -544,7 +544,7 @@
   }
 }
 
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: $laptop-large-screen - 1) {
   .feedbacks-section {
 
     .feedbacks-container {
@@ -559,7 +559,7 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: $laptop-screen - 1) {
   .feedbacks-section {
 
     .feedbacks-container {
@@ -574,7 +574,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $tablet-screen - 1) {
   .feedbacks-section {
 
     .feedbacks-container {
